--- a/docs/examples/XQ100_systems.ipynb
+++ b/docs/examples/XQ100_systems.ipynb
@@ -4,28 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to organize Ingestion of XQ100 datasets"
+    "# Notebook to organize Ingestion of XQ100 datasets (v1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# imports\n",
+    "import warnings\n",
     "from astropy import units as u\n",
     "\n",
     "from linetools.spectralline import AbsLine\n",
     "from linetools import utils as ltu\n",
     "from linetools.isgm.abscomponent import AbsComponent\n",
     "from linetools.isgm import utils as ltiu\n",
+    "from linetools.analysis import absline as laa\n",
     "\n",
     "\n",
     "import pyigm\n",
-    "from pyigm.surveys import dlasurvey as dlasvy"
+    "from pyigm.surveys import dlasurvey as dlasvy\n",
+    "from pyigm.abssys.dla import DLASystem"
    ]
   },
   {
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,8 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading QSOs file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/XQ-100/XQ100_zpath.fit\n",
-      "Loaded\n"
+      "Loading QSOs file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/XQ-100/XQ100_zpath.fit\n"
      ]
     },
     {
@@ -63,24 +65,105 @@
        "<IGMSurvey: nsys=41, type=DLA, ref=XQ-100, nsightlines=100>"
       ]
      },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xq100_dla = dlasvy.DLASurvey.load_XQ100(sample='all')\n",
+    "xq100_dla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<DLASystem: 00:03:22.9104 -26:03:16.812, 3.39, NHI=21.4, Z/H=0>,\n",
+       " <DLASystem: 00:06:51.6096 -62:08:03.696, 3.203, NHI=20.9, Z/H=0>,\n",
+       " <DLASystem: 00:06:51.6096 -62:08:03.696, 3.775, NHI=21, Z/H=0>,\n",
+       " <DLASystem: 00:34:54.8208 16:39:19.512, 3.755, NHI=20.4, Z/H=0>,\n",
+       " <DLASystem: 01:13:44.3712 -28:03:17.208, 3.106, NHI=21.2, Z/H=0>]"
+      ]
+     },
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xq100_statdla = dlasvy.DLASurvey.load_XQ100()\n",
-    "xq100_statdla"
+    "xq100_dla._abs_sys[0:5]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SkyCoord (ICRS): (ra, dec) in deg\n",
+       "    [(0.84546, -26.05467), (1.71504, -62.13436), (1.71504, -62.13436),\n",
+       "     (8.72842, 16.65542), (18.43488, -28.05478), (21.01571, 0.74244),\n",
+       "     (23.04104, 13.69431), (23.418, 4.01662), (23.418, 4.01662),\n",
+       "     (38.72975, -18.10236), (43.82741, 0.81318), (43.82741, 0.81318),\n",
+       "     (46.84533, -49.76333), (46.84533, -49.76333), (63.81321, -43.96469),\n",
+       "     (66.54304, -22.03814), (82.33671, -35.87614), (116.79647, 27.65093),\n",
+       "     (116.79647, 27.65093), (124.73242, 9.98001), (140.17401, 7.42892),\n",
+       "     (148.75039, -1.50181), (155.16926, 9.38174), (156.2359, 18.31911),\n",
+       "     (164.2724, 19.17857), (164.74326, 12.76526), (167.23113, 12.16482),\n",
+       "     (167.23113, 12.16482), (198.17863, 8.68475), (215.28232, -6.73232),\n",
+       "     (229.4841, 5.18433), (238.22935, 10.09399), (248.3318, 14.19501),\n",
+       "     (260.84667, 22.73278), (339.97333, -5.87194), (356.01333, 3.70722),\n",
+       "     (8.72842, 16.65542), (8.72842, 16.65542), (120.2095, 19.3497),\n",
+       "     (128.79551, 6.848), (238.22935, 10.09399)]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Chemical abundances -- Berg et al. 2016\n",
-    "\n",
-    "    wget http://www.astro.uvic.ca/~trystynb/XSHOOTER/Metals/tb_XQ100_metals_to_json.dat\n",
-    "    Put into pyigm/pyigm/data/DLA/XQ-100/"
+    "xq100_dla_coords = xq100_dla.coord\n",
+    "xq100_dla_coords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.39  ,  3.203 ,  3.775 ,  3.755 ,  3.106 ,  2.261 ,  3.936 ,\n",
+       "        3.692 ,  3.7725,  3.693 ,  3.9145,  3.2555,  4.4665,  3.591 ,\n",
+       "        3.808 ,  2.9825,  3.684 ,  3.4235,  3.901 ,  3.306 ,  2.238 ,\n",
+       "        4.0245,  2.592 ,  2.298 ,  3.3735,  3.4315,  3.546 ,  3.3965,\n",
+       "        2.66  ,  3.449 ,  2.6885,  3.601 ,  2.882 ,  3.698 ,  4.0805,\n",
+       "        3.22  ,  4.2835,  4.2523,  3.9465,  3.9555,  3.6665])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xq100_dla_zabs = xq100_dla.zabs\n",
+    "xq100_dla_zabs"
    ]
   },
   {
@@ -92,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +184,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4595656848\">\n",
+       "<table id=\"table4579279888\">\n",
        "<thead><tr><th>qso</th><th>ion</th><th>wl</th><th>zab</th><th>zem</th><th>ra</th><th>dec</th><th>vmin</th><th>vmax</th><th>filename</th><th>N</th><th>Nerr</th><th>flg</th><th>flg_analy</th><th>lambda</th><th>f</th></tr></thead>\n",
        "<thead><tr><th>str10</th><th>str4</th><th>int64</th><th>float64</th><th>float64</th><th>str10</th><th>str9</th><th>int64</th><th>int64</th><th>str38</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>J0003-2603</td><td>OI</td><td>1302</td><td>3.39</td><td>4.125</td><td>00:03:22.8</td><td>-26:03:19</td><td>-60</td><td>70</td><td>J0003-2603/tb_J0003-2603_vis_cont.fits</td><td>15.1</td><td>0.02</td><td>3</td><td>-1</td><td>1302.168</td><td>0.04887</td></tr>\n",
@@ -123,7 +206,7 @@
        "J0003-2603 CaII  3934    3.39   4.125 ...     3         0 3934.777    0.65"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +251,7 @@
        "      dtype='|S17')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -197,132 +280,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DLA=J0003-2603_z3.390, trans=OI 1302\n",
-      "f-values do not closely match for trans=OI 1302\n",
-      "f_lt=0.048, f_Berg=0.04887\n",
-      "DLA=J0003-2603_z3.390, trans=MgI 2852\n",
-      "f-values do not closely match for trans=MgI 2852\n",
-      "f_lt=1.73, f_Berg=1.81\n",
-      "DLA=J0003-2603_z3.390, trans=MgII 2796\n",
-      "f-values do not closely match for trans=MgII 2796\n",
-      "f_lt=0.6155, f_Berg=0.6123\n",
-      "DLA=J0003-2603_z3.390, trans=MgII 2803\n",
-      "f-values do not closely match for trans=MgII 2803\n",
-      "f_lt=0.3058, f_Berg=0.3054\n",
-      "DLA=J0003-2603_z3.390, trans=CaII 3934\n",
-      "DLA=J0003-2603_z3.390, trans=CaII 3969\n",
-      "DLA=J0003-2603_z3.390, trans=SiII 1304\n",
-      "f-values do not closely match for trans=SiII 1304\n",
-      "f_lt=0.0863, f_Berg=0.094\n",
-      "DLA=J0003-2603_z3.390, trans=SiII 1526\n",
-      "DLA=J0003-2603_z3.390, trans=SiII 1808\n",
-      "f-values do not closely match for trans=SiII 1808\n",
-      "f_lt=0.00208, f_Berg=0.002186\n",
-      "DLA=J0003-2603_z3.390, trans=CrII 2056\n",
-      "f-values do not closely match for trans=CrII 2056\n",
-      "f_lt=0.103, f_Berg=0.105\n",
-      "DLA=J0003-2603_z3.390, trans=CrII 2062\n",
-      "f-values do not closely match for trans=CrII 2062\n",
-      "f_lt=0.105, f_Berg=0.078\n",
-      "DLA=J0003-2603_z3.390, trans=CrII 2066\n",
-      "f-values do not closely match for trans=CrII 2066\n",
-      "f_lt=0.0698, f_Berg=0.0515\n",
-      "DLA=J0003-2603_z3.390, trans=MnII 2594\n",
-      "f-values do not closely match for trans=MnII 2594\n",
-      "f_lt=0.28, f_Berg=0.271\n",
-      "DLA=J0003-2603_z3.390, trans=MnII 2606\n",
-      "f-values do not closely match for trans=MnII 2606\n",
-      "f_lt=0.198, f_Berg=0.1927\n",
-      "DLA=J0003-2603_z3.390, trans=FeII 1608\n",
-      "f-values do not closely match for trans=FeII 1608\n",
-      "f_lt=0.0577, f_Berg=0.058\n",
-      "DLA=J0003-2603_z3.390, trans=FeII 1611\n",
-      "f-values do not closely match for trans=FeII 1611\n",
-      "f_lt=0.00138, f_Berg=0.00136\n",
-      "DLA=J0003-2603_z3.390, trans=FeII 2344\n",
-      "DLA=J0003-2603_z3.390, trans=FeII 2374\n",
-      "DLA=J0003-2603_z3.390, trans=NiII 1709\n",
-      "DLA=J0003-2603_z3.390, trans=NiII 1751\n",
-      "DLA=J0003-2603_z3.390, trans=ZnII 2026\n",
-      "f-values do not closely match for trans=ZnII 2026\n",
-      "f_lt=0.501, f_Berg=0.489\n",
-      "DLA=J0003-2603_z3.390, trans=ZnII 2062\n",
-      "f-values do not closely match for trans=ZnII 2062\n",
-      "f_lt=0.253, f_Berg=0.256\n",
-      "DLA=J0003-2603_z3.390, trans=PII 1532\n",
-      "f-values do not closely match for trans=PII 1532\n",
-      "f_lt=0.00303, f_Berg=0.00761\n",
-      "Skipping TiII\n",
-      "> <ipython-input-38-4827a2055335>(1)<module>()\n",
-      "-> for dla in unique_dlas:\n",
-      "(Pdb) comps\n",
-      "[<AbsComponent: 00:03:22.8 -26:03:19, Name=OI_z3.39000, Zion=(8,1), Ej=0 1 / cm, z=3.39, vlim=-60 km / s,70 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=MgI_z3.39000, Zion=(12,1), Ej=0 1 / cm, z=3.39, vlim=-140 km / s,70 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=MgII_z3.39000, Zion=(12,2), Ej=0 1 / cm, z=3.39, vlim=-220 km / s,200 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=SiII_z3.39000, Zion=(14,2), Ej=0 1 / cm, z=3.39, vlim=-200 km / s,70 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=PII_z3.39000, Zion=(15,2), Ej=0 1 / cm, z=3.39, vlim=-20 km / s,50 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=CaII_z3.39000, Zion=(20,2), Ej=0 1 / cm, z=3.39, vlim=-20 km / s,50 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=CrII_z3.39000, Zion=(24,2), Ej=0 1 / cm, z=3.39, vlim=-40 km / s,75 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=MnII_z3.39000, Zion=(25,2), Ej=0 1 / cm, z=3.39, vlim=-90 km / s,60 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=FeII_z3.39000, Zion=(26,2), Ej=0 1 / cm, z=3.39, vlim=-110 km / s,70 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=NiII_z3.39000, Zion=(28,2), Ej=0 1 / cm, z=3.39, vlim=-40 km / s,70 km / s>, <AbsComponent: 00:03:22.8 -26:03:19, Name=ZnII_z3.39000, Zion=(30,2), Ej=0 1 / cm, z=3.39, vlim=-20 km / s,50 km / s>]\n"
+      "Working on DLA <DLASystem: 00:03:22.9104 -26:03:16.812, 3.39, NHI=21.4, Z/H=0>\n",
+      "Skipping TiII\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:17: UserWarning: DLA J0003-2603_z3.390 has a large coordinate offset = [ 2.65977323] arcsec\n"
      ]
     }
    ],
    "source": [
-    "for dla in unique_dlas:\n",
+    "for cdla in unique_dlas:\n",
     "    # Rows matching this DLA\n",
-    "    mti = np.where(dlas == dla)[0]\n",
+    "    mti = np.where(dlas == cdla)[0]\n",
     "    # Generate abslines\n",
     "    abslines = []\n",
-    "    for ii in mti:\n",
+    "    for jj,ii in enumerate(mti):\n",
     "        row = berg_tbl[ii]\n",
+    "        if jj == 0:\n",
+    "            coord = ltu.radec_to_coord((row['ra'],row['dec']))\n",
+    "            # Match to DLA in XQ-100 survey\n",
+    "            sep = coord.separation(xq100_dla_coords)\n",
+    "            imin = np.argmin(sep)\n",
+    "            mt = np.where((sep < 5*u.arcsec) & (np.abs(row['zab']-xq100_dla_zabs) < 1e-2))[0]\n",
+    "            if len(mt) != 1:\n",
+    "                xdb.set_trace()\n",
+    "            if sep[mt[0]] > 1*u.arcsec:\n",
+    "                warnings.warn(\"DLA {} has a large coordinate offset = {}\".format(cdla,sep[mt].to('arcsec')))\n",
+    "            dla = xq100_dla._abs_sys[mt[0]]\n",
+    "            # Reset DLA\n",
+    "            dla.zabs = row['zab']\n",
+    "            dla._components= []\n",
+    "            print(\"Working on DLA {}\".format(dla))\n",
     "        if row['ion'] == 'TiII':\n",
     "            print('Skipping TiII')\n",
     "            continue\n",
     "        #\n",
     "        trans = '{:s} {:d}'.format(row['ion'],row['wl'])\n",
-    "        print('DLA={:s}, trans={:s}'.format(dla,trans))\n",
+    "        #print('DLA={:s}, trans={:s}'.format(cdla,trans))\n",
     "        aline = AbsLine(trans)\n",
     "        # Coord, zem, etc. attrib\n",
-    "        aline.attrib['coord'] = ltu.radec_to_coord((row['ra'],row['dec']))\n",
+    "        aline.attrib['coord'] = dla.coord\n",
     "        aline.attrib['z'] = row['zab']\n",
     "        aline.attrib['logN'] = row['N']\n",
     "        aline.attrib['sig_logN'] = row['Nerr']\n",
     "        aline.attrib['flag_N'] = row['flg']\n",
+    "        laa.linear_clm(aline.attrib)\n",
+    "        #xdb.set_trace()\n",
     "        # Analysis\n",
     "        aline.analy['vlim'] = [row['vmin'], row['vmax']]*u.km/u.s\n",
-    "        aline.analy['do_analysis'] = row['flg_analy']\n",
+    "        aline.analy['do_analysis'] = row['flg_analy']+1\n",
     "        aline.analy['spec'] = row['filename']\n",
     "        # Checks\n",
     "        np.testing.assert_allclose(aline.wrest.value, row['lambda'], rtol=1e-4)\n",
     "        try:\n",
     "            np.testing.assert_allclose(aline.data['f'], row['f'], rtol=1e-4)\n",
     "        except AssertionError:\n",
-    "            print(\"f-values do not closely match for trans={:s}\".format(trans))\n",
-    "            print(\"f_lt={:g}, f_Berg={:g}\".format(aline.data['f'], row['f']))\n",
+    "            pass\n",
+    "            #print(\"f-values do not closely match for trans={:s}\".format(trans))\n",
+    "            #print(\"f_lt={:g}, f_Berg={:g}\".format(aline.data['f'], row['f']))\n",
     "        # Add\n",
     "        abslines.append(aline)\n",
-    "    # Generate components\n",
+    "    # Generate components and add them in\n",
     "    comps = ltiu.build_components_from_abslines(abslines, chk_vel=False)\n",
-    "    xdb.set_trace()"
+    "    for comp in comps:\n",
+    "        comp.synthesize_colm(overwrite=True)\n",
+    "        dla.add_component(comp)\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "&lt;Table length=11&gt;\n",
+       "<table id=\"table4649159888\">\n",
+       "<thead><tr><th>Z</th><th>ion</th><th>A</th><th>Ej</th><th>z</th><th>vmin</th><th>vmax</th><th>flag_N</th><th>logN</th><th>sig_logN</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th>1 / cm</th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>8</td><td>1</td><td>0</td><td>0.0</td><td>3.39</td><td>-60.0</td><td>70.0</td><td>0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>12</td><td>1</td><td>0</td><td>0.0</td><td>3.39</td><td>-140.0</td><td>70.0</td><td>1</td><td>11.85</td><td>0.03</td></tr>\n",
+       "<tr><td>12</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-220.0</td><td>200.0</td><td>2</td><td>14.04</td><td>0.01</td></tr>\n",
+       "<tr><td>14</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-200.0</td><td>70.0</td><td>2</td><td>14.37</td><td>0.01</td></tr>\n",
+       "<tr><td>15</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-20.0</td><td>50.0</td><td>3</td><td>13.73</td><td>0.0</td></tr>\n",
+       "<tr><td>20</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-20.0</td><td>50.0</td><td>3</td><td>11.81</td><td>0.0</td></tr>\n",
+       "<tr><td>24</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-40.0</td><td>75.0</td><td>1</td><td>13.07</td><td>0.04</td></tr>\n",
+       "<tr><td>25</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-90.0</td><td>60.0</td><td>3</td><td>12.39</td><td>0.06</td></tr>\n",
+       "<tr><td>26</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-110.0</td><td>70.0</td><td>1</td><td>14.75</td><td>0.04</td></tr>\n",
+       "<tr><td>28</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-40.0</td><td>70.0</td><td>1</td><td>13.42</td><td>0.04</td></tr>\n",
+       "<tr><td>30</td><td>2</td><td>0</td><td>0.0</td><td>3.39</td><td>-20.0</td><td>50.0</td><td>1</td><td>12.1</td><td>0.05</td></tr>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "[<AbsLine: OI 1302, wrest=1302.1685 Angstrom>,\n",
-       " <AbsLine: MgI 2852, wrest=2852.9642 Angstrom>,\n",
-       " <AbsLine: MgII 2796, wrest=2796.3543 Angstrom>,\n",
-       " <AbsLine: MgII 2803, wrest=2803.5315 Angstrom>,\n",
-       " <AbsLine: CaII 3934, wrest=3934.7770 Angstrom>]"
+       "<Table length=11>\n",
+       "  Z    ion    A      Ej      z      vmin    vmax  flag_N   logN  sig_logN\n",
+       "                   1 / cm          km / s  km / s                        \n",
+       "int64 int64 int64 float64 float64 float64 float64 int64  float64 float64 \n",
+       "----- ----- ----- ------- ------- ------- ------- ------ ------- --------\n",
+       "    8     1     0     0.0    3.39   -60.0    70.0      0     0.0      0.0\n",
+       "   12     1     0     0.0    3.39  -140.0    70.0      1   11.85     0.03\n",
+       "   12     2     0     0.0    3.39  -220.0   200.0      2   14.04     0.01\n",
+       "   14     2     0     0.0    3.39  -200.0    70.0      2   14.37     0.01\n",
+       "   15     2     0     0.0    3.39   -20.0    50.0      3   13.73      0.0\n",
+       "   20     2     0     0.0    3.39   -20.0    50.0      3   11.81      0.0\n",
+       "   24     2     0     0.0    3.39   -40.0    75.0      1   13.07     0.04\n",
+       "   25     2     0     0.0    3.39   -90.0    60.0      3   12.39     0.06\n",
+       "   26     2     0     0.0    3.39  -110.0    70.0      1   14.75     0.04\n",
+       "   28     2     0     0.0    3.39   -40.0    70.0      1   13.42     0.04\n",
+       "   30     2     0     0.0    3.39   -20.0    50.0      1    12.1     0.05"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abslines"
+    "dla.fill_ionN()\n",
+    "dla._ionN"
    ]
   },
   {
